--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@
 .dice {
   box-shadow: 0px 2px 2px rgba(0,0,0, 0.15);
 }
+
+button:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
